[package]
name = "memcached-rust"
version = "0.1.0"
authors = ["calou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.8"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
rocksdb = { version = "0.13.0" }
nom = "5.1.1"
bytes = "0.5"
byteorder = "1.3.4"