[package]
name = "rockscached-db"
version = "0.1.0"
authors = ["calou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.8"
log4rs = "0.12.0"
futures = "0.3.4"
rocksdb = { version = "0.15.0" }
nom = "5.1.1"
bytes = "0.5"
byteorder = "1.3.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false